	* tools/configure.c:  configure.c can be used to build a work-alike
	  program as a replacement for configure.sh.  This work-alike
	  program would be used in environments that do not support Bash
	  scripting (such as the Windows native environment).
	* tools/configure.bat: configure.bat is a small Windows batch
	  file that can be used as a replacement for configure.sh in a
	  Windows native environment.  configure.bat is actually just a
	  thin layer that execuates configure.exe if it is available. If
	  configure.exe is not available, then configure.bat will attempt
	  to build it first.
	* arch/arm/src/lpc17xx/lpc17_syscon.h:  Correct some typos in bit
	  definitions (from Rommel Marcelo).
	* libc/string/lib_strndup.c: strndup() should use strnlen(), not
	  strlen(), to determine the size of the string.
	* sched/os_bringup.c:  Remove support for CONFIG_BUILTIN_APP_START.
	  This is not really a useful feature and creates a violation of the
	  OS layered architecture.
	* include/unistd.h, arch/arch/src/*:  Implement a simple vfork().
	  On initial checkin, this API is available only for ARM platforms.
	* binfmt/binfmt_exec.c: exec() now sets the priority of the new task
	  to the same priority as the current task (instead of the arbirtrary
	  value of 50).
	* libc/unisted/lib_execv.c and lib_execl.c:  New, somewhat flawed,
	  implementations of execv() and execl().
	* tools/cfgdefine.c:  Strips quotes from CONFIG_EXECFUNCS_SYMTAB
	  value.
	* arch/arm/include/lm3s/chip.h:  Move chip definitions into
	  public include area for compatibility with other architectures.
	* arch/arm/src/lm3s/chip:  Move register definition header files
	  into a new chip/ sub-directory.
	* arch/arm/src/lm3s/lm3s_internal.h:  Broke up into several
	  smaller header files.
	* arch/arm/src/lm:  Rename the arch/arm/src/lm3s directory to
	  arch/arm/src/lm so that is can support other members of the
	  Stellaris family.
	* libc/spawn:  Add file action interfaces needed by posix_spawn().
